Fixed z-index issue with nav and small screen sizes

--- a/site/css/src/partials/_ng_view.scss
+++ b/site/css/src/partials/_ng_view.scss
@@ -18,12 +18,12 @@
  */
 
 .ng-enter {
-    z-index: 1000;
+    z-index: 400;
     position: relative;
 }
 
 .ng-leave {
-    z-index: 2000;
+    z-index: 401;
     position: relative;
 }
 
